--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
+
+    android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -8,8 +10,18 @@
     <fragment
         android:id="@+id/fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
+        android:layout_weight="30"
+        android:layout_width="0px"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:navGraph="@navigation/navig" />
-</RelativeLayout>
+
+    <fragment
+        android:id="@+id/fragment1"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_weight="70"
+        android:layout_width="0px"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/navig" />
+</LinearLayout>
